--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -15,6 +15,8 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <fileTypeFactory implementation="com.neptune.jagintellij.JagConfigFileTypeFactory"/>
+        <lang.parserDefinition language="JagConfig" implementationClass="com.neptune.jagintellij.JagConfigParserDefinition"/>
+        <lang.syntaxHighlighterFactory language="JagConfig" implementationClass="com.neptune.jagintellij.JagConfigSyntaxHighlighterFactory"/>
     </extensions>
 
     <actions>
