--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -23,6 +23,7 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <fileTypeFactory implementation="com.neptune.jagintellij.cs2.ClientScriptFileTypeFactory"/>
+        <colorProvider implementation="com.neptune.jagintellij.cs2.editor.ClientScriptColorProvider" />
         <annotator language="ClientScript" implementationClass="com.neptune.jagintellij.cs2.editor.ClientScriptHighlightAnnotator"/>
         <lang.parserDefinition language="ClientScript" implementationClass="com.neptune.jagintellij.cs2.ClientScriptParserDefinition"/>
         <lang.syntaxHighlighterFactory language="ClientScript" implementationClass="com.neptune.jagintellij.cs2.ClientScriptSyntaxHighlighterFactory"/>
